examples/test/testpolicy9642.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9642
  namespace: namespace370
spec:
  podSelector:
    matchLabels:
      key49: value10
      key27: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value45
          key46: value42
      podSelector:
        matchLabels:
          key39: value14
          key7: value32
